Fix clipping of icon for IPInfo popups when language is set to ar
Bug: T298942

--- a/modules/ext.ipInfo/ipinfo.less
+++ b/modules/ext.ipInfo/ipinfo.less
@@ -21,7 +21,8 @@
 		padding: 0;
 		margin-left: 2px;
 		min-width: 20px;
-		min-height: 20px;
+		// min-height adjusted to fix clipping when language is ar, see T298942
+		min-height: 22px;
 		overflow: hidden;
 
 		& > .oo-ui-iconElement-icon {
